add skill matrix

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jul 11 2018 22:16:49 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Jul 13 2018 17:20:18 GMT+0000 (UTC)  -->
 <html data-wf-page="5b4436ba05b1ce3de7cc083d" data-wf-site="5b4436ba05b1ceed61cc083a">
 <head>
   <meta charset="utf-8">
@@ -36,8 +36,22 @@
         <div class="w-col w-col-8">
           <h4>As a web developer and project-based consultant I offer:<br></h4>
           <p>- Hands on ruby or javascript development<br>- Business-facing solutions and optimizations<br>- Startup starter packages and technology audits <br>- Access to a network of experienced developers, designers and consultants for solving any problem<br></p>
-          <h3 class="heading">Get started with a conversation.</h3>
+          <div class="skills-matrix">
+            <div class="skills-element">
+              <h3>Ruby/Ruby-on-Rails</h3>
+              <div style="width:0%" class="skill-bar"></div>
+            </div>
+            <div class="skills-element">
+              <h3>HTML/CSS</h3>
+              <div style="width:0PX" class="html-skill-bar"></div>
+            </div>
+            <div class="skills-element">
+              <h3>Javascript</h3>
+              <div style="width:0PX" class="javascript-skill-bar"></div>
+            </div>
+          </div>
           <div class="form-wrapper squeezed w-form">
+            <h3 class="heading">Get started with a conversation.</h3>
             <form id="email-form" action="https://formspree.io/mglobel@gmail.com" method="POST" name="email-form" data-name="Email Form" class="form">
               <label for="name" class="form-label">Name:</label>
               <input type="text" id="name" name="name" data-name="Name" placeholder="Eg. John Ipcus" maxlength="256" class="form-field w-input">
@@ -53,7 +67,9 @@
         </div>
       </div>
     </div>
+    <div class="w-container"></div>
   </div>
+  <div class="skills-matrix"></div>
   <div id="journal" class="section">
     <div class="w-container">
       <div class="div-block"><a href="http://www.twitter.com/userid" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d5d7d759546f_social-09-white.svg" width="25" class="image-5"></a><a href="https://github.com/mglobel" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d51618595455_social-05-white.svg" width="25" class="image-6"></a><a target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d51420595478_social-12-white.svg" width="25" class="image-5"></a><a href="https://www.instagram.com/mglobel/" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d52a1759544f_social-07-white.svg" width="25" class="image-5"></a><a target="_blank" class="social-button w-inline-block"><img src="images/if_angellist-2048-black_167683-2.png" width="25" height="24" class="image-5"></a><a href="http://www.twitter.com/userid" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d5e070595461_social-18-white.svg" width="25" class="image-5"></a></div>
