update background image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jul 14 2018 01:44:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Jul 16 2018 16:46:14 GMT+0000 (UTC)  -->
 <html data-wf-page="5b4436ba05b1ce3de7cc083d" data-wf-site="5b4436ba05b1ceed61cc083a">
 <head>
   <meta charset="utf-8">
@@ -38,6 +38,7 @@
           <h2>About me</h2>
         </div>
         <div class="w-col w-col-8">
+          <p>Creative problem solver helping organizations use the modern web effectively and efficiently. Ruby-on-Rails and Javascript Web Developer, based in Austin, TX. Experienced in startups, non-profits, and community organizations.</p>
           <h4>As a web developer and project-based consultant I offer:<br></h4>
           <p>- Hands on ruby or javascript development<br>- Business-facing solutions and optimizations<br>- Startup starter packages and technology audits <br>- Access to a network of experienced developers, designers and consultants for solving any problem<br></p>
           <div class="skills-matrix">
@@ -56,6 +57,7 @@
           </div>
           <div class="form-wrapper squeezed w-form"><img src="images/IMG_0181.JPG" srcset="images/IMG_0181-p-500.jpeg 500w, images/IMG_0181-p-800.jpeg 800w, images/IMG_0181-p-2000.jpeg 2000w, images/IMG_0181-p-2600.jpeg 2600w, images/IMG_0181-p-3200.jpeg 3200w, images/IMG_0181.JPG 4705w" sizes="(max-width: 767px) 94vw, (max-width: 991px) 382.9375px, 502.1875px" class="image-7">
             <form id="email-form" action="https://formspree.io/mglobel@gmail.com" method="POST" name="email-form" data-name="Email Form" class="form">
+              <h3 class="heading">Get started with a conversation.</h3>
               <label for="name" class="form-label">Name:</label>
               <input type="text" id="name" name="name" data-name="Name" placeholder="Eg. John Ipcus" maxlength="256" class="form-field w-input">
               <label for="name" class="form-label">Website</label>
