remove contact form

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jul 16 2018 16:46:14 GMT+0000 (UTC)  -->
+<!--  Last Published: Tue Jul 24 2018 22:40:33 GMT+0000 (UTC)  -->
 <html data-wf-page="5b4436ba05b1ce3de7cc083d" data-wf-site="5b4436ba05b1ceed61cc083a">
 <head>
   <meta charset="utf-8">
@@ -54,30 +54,15 @@
               <h3>Javascript</h3>
               <div style="width:0PX" class="javascript-skill-bar"></div>
             </div>
-          </div>
-          <div class="form-wrapper squeezed w-form"><img src="images/IMG_0181.JPG" srcset="images/IMG_0181-p-500.jpeg 500w, images/IMG_0181-p-800.jpeg 800w, images/IMG_0181-p-2000.jpeg 2000w, images/IMG_0181-p-2600.jpeg 2600w, images/IMG_0181-p-3200.jpeg 3200w, images/IMG_0181.JPG 4705w" sizes="(max-width: 767px) 94vw, (max-width: 991px) 382.9375px, 502.1875px" class="image-7">
-            <form id="email-form" action="https://formspree.io/mglobel@gmail.com" method="POST" name="email-form" data-name="Email Form" class="form">
-              <h3 class="heading">Get started with a conversation.</h3>
-              <label for="name" class="form-label">Name:</label>
-              <input type="text" id="name" name="name" data-name="Name" placeholder="Eg. John Ipcus" maxlength="256" class="form-field w-input">
-              <label for="name" class="form-label">Website</label>
-              <input type="text" id="name-2" name="name-2" data-name="Name 2" placeholder="Eg. Company, Startup, Project" maxlength="256" class="form-field w-input"><label for="email" class="form-label">Email Address:</label><input type="email" class="form-field w-input" maxlength="256" name="_replyto" data-name="Email" placeholder="joe@shmoe.com" id="email" required=""><label for="email" class="form-label">Phone:</label><input type="text" class="form-field w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="(xxx) xxxx" id="email-2" required=""><label for="field" class="form-label">Project Status</label><select id="Time-frame-2" name="Time-frame-2" data-name="Time Frame 2" class="select-field-3 w-select"><option value="">Select one...</option><option value="First">Scoping</option><option value="Second">Ready to Start</option><option value="Another Choice">In Progress</option><option value="Third">Blocked</option><option value="Another Choice">Just Looking</option></select><label for="field" class="form-label">Starting Time Frame</label><select id="Time-frame" name="Time-frame" data-name="Time Frame" class="select-field-3 w-select"><option value="">Select one...</option><option value="First">As soon as possible</option><option value="Second">Within a month</option><option value="Third">Third Choice</option></select><label for="field" class="form-label">Referred By</label><input type="text" id="name-3" name="name-3" data-name="Name 3" placeholder="Eg. John Ipcus" maxlength="256" class="form-field w-input"><input type="submit" value="Get in Contact" data-wait="Please wait..." class="button-2 full-width w-button"></form>
-            <div class="success-wrapper w-form-done">
-              <p class="success-message">Thank you! Your submission has been received!</p>
-            </div>
-            <div class="error-wrapper w-form-fail">
-              <p class="error-message">Oops! Something went wrong while submitting the form :(</p>
-            </div>
+            <p><br>For more information about working with me or questions about a potential project, message me at <a href="mailto:mglobel@gmail.com?subject=Are%20you%20available%20to%20discuss%20a%20project%3F">mglobel@gmail.com</a>.</p>
           </div>
         </div>
       </div>
     </div>
-    <div class="w-container"></div>
   </div>
-  <div class="skills-matrix"></div>
   <div id="journal" class="section">
     <div class="w-container">
-      <div class="div-block"><a href="http://www.twitter.com/userid" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d5d7d759546f_social-09-white.svg" width="25" class="image-5"></a><a href="https://github.com/mglobel" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d51618595455_social-05-white.svg" width="25" class="image-6"></a><a target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d51420595478_social-12-white.svg" width="25" class="image-5"></a><a href="https://www.instagram.com/mglobel/" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d52a1759544f_social-07-white.svg" width="25" class="image-5"></a><a target="_blank" class="social-button w-inline-block"><img src="images/if_angellist-2048-black_167683-2.png" width="25" height="24" class="image-5"></a><a href="http://www.twitter.com/userid" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d5e070595461_social-18-white.svg" width="25" class="image-5"></a></div>
+      <div class="div-block"><a href="https://www.linkedin.com/in/mglobel/" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d5d7d759546f_social-09-white.svg" width="25" class="image-5"></a><a href="https://github.com/mglobel" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d51618595455_social-05-white.svg" width="25" class="image-6"></a><a target="_blank" href="https://webflow.com/mglobel" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d51420595478_social-12-white.svg" width="25" class="image-5"></a><a href="https://www.instagram.com/mglobel/" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d52a1759544f_social-07-white.svg" width="25" class="image-5"></a><a target="_blank" href="https://angel.co/mglobel" class="social-button w-inline-block"><img src="images/if_angellist-2048-black_167683-2.png" width="25" height="24" class="image-5"></a><a href="http://www.twitter.com/lobasaurusrex" target="_blank" class="social-button w-inline-block"><img src="https://uploads-ssl.webflow.com/5b3546ba0c38d5f93759541c/5b3546ba0c38d5e070595461_social-18-white.svg" width="25" class="image-5"></a></div>
     </div>
   </div>
   <div>
